<resources>
    <string name="app_name">Comedor</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="accountText">Crear cuenta</string>
    <string name="emailTxt">Ingrese email</string>
    <string name="login">Iniciar Sesión</string>
    <string name="recoverPassword">¿Olvidaste tu contraseña?</string>
    <string name="createNewUser">Crear una cuenta</string>
    <string name="forgottext">Ingrese su cuenta de correo</string>
    <string name="sendPass">Enviar contraseña</string>
    <string name="select_type">Tipo de cuenta:</string>
    <string name="seePersonal">Ver Personal</string>
    <string name="adminTitle">Administrador</string>
    <string name="txvinfComedor">Este comedor brinda los servicios de:</string>
    <string name="getBackbtn">Regresar</string>
    <string name="cena">Cena</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="desayuno">Desayuno</string>
    <string name="titleAddService">Registrar Nuevo Servicio</string>
    <string name="servicio">Servicio</string>
    <string name="dni">DNI</string>
    <string name="inputDNI">Ingrese su número de DNI</string>
    <string name="registrar">Registrar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bienvenido:</string>
    <string name="location">Ubicacion</string>
    <string name="status">Estado</string>
    <string name="title_activity_admincomedortest">admincomedortest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="baseurl">"http://192.168.1.37/API-PHP/"</string>
    <string name="nuevoComedor">"http://192.168.1.37/API-PHP/comedor/nuevo</string>
    <string name="listarEmpleadoApi">"http://192.168.1.37/API-PHP/empleado"</string>
    <string name="bienvenido">BIenvenido:</string>
    <string name="enterDNI">Ingrese su DNI</string>
    <string name="total">Total</string>
    <string name="add">Agregar</string>
    <string name="search">Buscar</string>
    <string name="date">Seleccione una fecha</string>
    <string name="details">Detalles</string>
    <string name="editUserInfo">Editar Datos</string>
    <string name="nombre_del_comedor">Nombre del Comedor</string>
    <string name="nombre_del_gerente_administrativo">Nombre del Gerente Administrativo</string>
    <string name="telefono">Telefono</string>
    <string name="ruc">RUC</string>
    <string name="editar">EDITAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="listado_de_comedores">Listado de comedores</string>
    <string name="listarComedores">"http://192.168.1.37/API-PHP/comedor"</string>
    <string name="correo">Correo</string>
    <string name="nombre_de_comedor">Nombre de Comedor</string>
    <string name="regresar">Regresar</string>
    <string name="guardar_cambios">Guardar cambios</string>

</resources>
