<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
<<<<<<< HEAD
    tools:context=".LoginActivity">
=======
    tools:context=".View.LoginView.LoginActivity">
>>>>>>> 66e70d99c360d19b8f650abd34d1e51b3e0c1993

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>

    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailTxt"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/txtUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="10dp"/>




    <Button
        android:id="@+id/button"
<<<<<<< HEAD
        android:onClick="login"
=======
>>>>>>> 66e70d99c360d19b8f650abd34d1e51b3e0c1993
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="10dp"
<<<<<<< HEAD
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>
=======
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>
    <!--        android:onClick="login"-->


>>>>>>> 66e70d99c360d19b8f650abd34d1e51b3e0c1993


    <TextView
        android:onClick="recoverPassword"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/txvRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverPassword"
        android:textAlignment="center"/>


    <TextView
        android:onClick="register"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/txvNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createNewUser"
        android:textAlignment="center"
        />
</LinearLayout>