<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RecoverView.ForgotPassActivity"
    android:orientation="vertical"
    android:paddingTop="250dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:ignore="ExtraText">


    <EditText
        android:id="@+id/passForgotE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/forgottext"
        />
    <Space
        android:layout_width="40dp"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/btnRecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendPass"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>
    <Space
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <Button

    android:id="@+id/btnback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/getBackbtn"
    android:textColor="@android:color/white"
    android:background="@color/colorPrimary"/>


    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>

</LinearLayout>