<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"

    tools:context=".View.AdministratorView.AdministratorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/edt_nombre"
            android:background="@drawable/edit_shape"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_comedor"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/edt_admin_name"
            android:background="@drawable/edit_shape"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_gerente_administrativo"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            />
        <EditText
            android:id="@+id/edt_telefono_comedor"
            android:background="@drawable/edit_shape"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_marginBottom="8dp"
            android:inputType="phone"
            />
        <EditText
            android:id="@+id/edt_correo_comedor"
            android:background="@drawable/edit_shape"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">
        <Button
            android:id="@+id/btn_agregar_comedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar"/>
        <Space
            android:layout_width="90dp"
            android:layout_height="10dp"/>
        <Button
            android:id="@+id/btn_editar_comedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:enabled="false"/>
    </LinearLayout>


<!--        <LinearLayout-->

<!--            android:layout_width="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="wrap_content">-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->

<!--                android:textColor="#FFF"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_gravity="left|center"-->
<!--                android:gravity="left|center"-->
<!--                android:padding="15sp"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/adddata"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_weight="4"-->
<!--            android:layout_gravity="right|center"-->
<!--            android:gravity="right|center"-->
<!--            android:padding="5sp"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ImageView-->
<!--                android:layout_width="34sp"-->
<!--                android:padding="15sp"-->
<!--                android:background="@drawable/ic_add_circle_black_24dp"-->
<!--                android:layout_height="34sp"/>-->

<!--        </LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="5"
        android:background="@android:color/holo_blue_light"
        android:padding="5sp"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listado_de_comedores"
            android:textAllCaps="true"
            android:textSize="16sp"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout

        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_centerInParent="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userrecyclerview"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10sp"
                android:layout_marginBottom="10sp"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>