<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.ComedorView.ServicesInfoView">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:gravity="center"
        android:text="@string/txvinfComedor"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReturn" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getBackbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:id="@+id/layoutParent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="430dp"
            android:layout_height="80dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/desayuno"
            android:textAlignment="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutCsh2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/layoutParent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="430dp"
            android:layout_height="80dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/almuerzo"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/layoutCsh2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="430dp"
            android:layout_height="80dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cena"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>